2002-06-05  Roland McGrath  <roland@frob.com>

	* info.c (S_proc_getprocinfo): If PI_FETCH_TASKEVENTS is set in *FLAGS,
	fill in PI->taskevents using task_info with TASK_EVENTS_INFO.

2002-05-07  Roland McGrath  <roland@frob.com>

	* host.c (S_proc_setexecdata, S_proc_getexecdata): u_int -> size_t
	(initialize_version_info): Likewise.  Fix cast in host_info arg.
	(get_string_array): Likewise.
	* info.c (get_string, S_proc_getprocargs, S_proc_getprocenv): Likewise.
	(S_proc_getprocinfo, S_proc_getloginpids): Likewise.
	(S_proc_getprocinfo): int -> size_t; fix casts in *_info argument.

	* mgt.c (S_proc_reauthenticate, S_proc_getallpids): Likewise.
	(add_tasks, S_proc_dostop): Likewise.
	(S_proc_exception_raise): int -> integer_t
	* pgrp.c (S_proc_getsessionpids, S_proc_getsessionpgids): Likewise.
	(S_proc_getpgrppids): Likewise.

2002-02-17  Roland McGrath  <roland@frob.com>

	* info.c (S_proc_getprocinfo) [TASK_SCHED_TIMESHARE_INFO]: Do a second
	task_info call to fill in PI->timeshare_base_info.

2001-12-22  Roland McGrath  <roland@frob.com>

	* proc.h (check_owner): Move this extern inline function ...
	* info.c (check_owner): ... to here, made static inline.

2001-08-14  Marcus Brinkmann  <marcus@gnu.org>

	* mgt.c (S_proc_dostop): If task_threads fails, resume the
	suspended task.

2001-08-06  Roland McGrath  <roland@frob.com>

	* wait.c (S_proc_wait: reap): Set *PID_STATUS to CHILD->p_pid.
	Reported by Neal H Walfield  <neal@cs.uml.edu>.

	* mgt.c (allocate_proc): Don't zero P->p_pi.
	Reported by Neal H Walfield  <neal@cs.uml.edu>.

2001-08-05  Roland McGrath  <roland@frob.com>

	* wait.c (sample_rusage): New function.
	(S_proc_mark_exit): Call it.

2001-08-04  Roland McGrath  <roland@frob.com>

	* proc.h (struct proc): New members p_rusage, p_child_rusage.
	* wait.c (rusage_add): New static function.
	(alert_parent): Use it to add dead child's p_rusage into parent's
	p_child_rusage.
	(S_proc_wait): Fill *RU out param with CHILD->p_rusage, not just zeros.